chef workings and notification setup
